# SystemDesign

./: .gitignore  README.md  docker-compose.yaml
api-service/: CMakeLists.txt  readme.md
api-service/config/: config.yaml
api-service/docker/: Dockerfile  docker-compose.yaml
api-service/docs/: openapi.yaml
api-service/src/: db_utils.cpp  db_utils.hpp  main.cpp  mongo_client.cpp  mongo_client.hpp
api-service/src/handlers/: auth_handler.cpp  auth_handler.hpp  patient_handler.cpp  patient_handler.hpp  record_handler.cpp  record_handler.hpp  user_handler.cpp  user_handler.hpp
api-service/tests/: run.sh  tests.sh  utils.sh
architecture/: readme.md
database/: data.sql  optimization.md  queries.sql  readme.md  schema.sql
mongodb/: data.js  queries.md  readme.md  schema_design.md  validation.js
postgres/: data.sql  optimization.md  queries.sql  readme.md  schema.sql
task01/: workspace.dsl
